rules/ingress-and-egress-blocked/test/cnp-endpoint-selector-match/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: test
    namespace: my-ns
    labels:
      app: test
spec:
      containers:
      - args:
        - server
        image: test:latest
        name: test
        imagePullPolicy: Never
